# Pomodoro

./: .gitignore  LICENCE.txt  pyproject.toml  readme.md  run.py
pomodoro/: __init__.py  views.py
pomodoro/templates/: home.html
